assets/main.css
html, body {
    margin: 0;
    padding: 0;
}
#main {
    --bgcolor: #1f1f1f;
    --fgcolor: #c4c4c4;
    --linkcolor: #91a4d2;
    --maxwidth: 90ch;

    --cardcolor: color-mix(in srgb, var(--bgcolor) 75%, black);
    --bordercolor: color-mix(in srgb, var(--fgcolor), var(--bgcolor));

    background-color: var(--bgcolor);
    color: var(--fgcolor);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#header, #footer {
    background-color: var(--cardcolor);
    padding: 20px 0;
}
#content {
    border-block: 1px solid var(--bordercolor);
    padding: 20px 0;
    flex-grow: 1;
}
#footer {
    text-align: center;
}

.container {
    max-width: var(--maxwidth);
    margin: 0 auto;
    padding: 0 20px;
}
*:first-child {
    margin-top: 0;
}
*:last-child {
    margin-bottom: 0;
}

a {
    color: var(--linkcolor);
    text-decoration: none;
    transition: color 0.2s ease;
}
a:hover {
    color: color-mix(in srgb, var(--linkcolor) 50%, white);
}
.buttons a {
    color: var(--fgcolor);
}
.buttons a:hover {
    color: white;
}

.card {
    background-color: var(--cardcolor);
    border-radius: 40px;
    padding: 20px 30px;
}
.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    gap: 20px;
}
.row.center {
    margin: 0 auto;
    justify-content: center;
}
.fit {
    width: fit-content;
}

.profile {
    aspect-ratio: 1;
    width: 20ch;
    max-width: 20vw;
    margin-right: 10px;
    border-radius: 100%;
}
@media (max-width: 500px) {
    .large-only {
        display: none;
    }
}

li:not(:first-child) {
    margin-top: 10px;
}

